--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ rssLimit = 10
 paginate = 10
 pygmentsCodefences = true
 pygmentsStyle = "native"
+publishDir = "docs"
 
 [taxonomies]
     category = "categories"  
