updated title of site

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "http://henryhe.me/space/"
 languageCode = "en-us"
-title = "keep me where the light is"
+title = "s p a c e"
 theme = "natrium"
 preserveTaxonomyNames = true
 rssLimit = 10
