--- a/config.toml
+++ b/config.toml
@@ -25,19 +25,26 @@ disqusShortname = "spaceblog-1"
     weight = -110
     
 [[menu.main]]
+    name = "music"
+    url = "/music/"
+    weight = -120
+    
+[[menu.main]]
     name = "tags"
     url = "/tags"
-    weight = -120
+    weight = -130
 
 [[menu.main]]
     name = "categories"
     url = "/categories"
-    weight = -130
+    weight = -140
 
- [[menu.main]]
+[[menu.main]]
     name = "posts"
     url = "/"
-    weight = -140
+    weight = -150
+
+
 
 
 
